Fixing most HTML5 bugs